[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/DoomsdayZone.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/SuperSonic.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/FinalLevel.gd" type="Script" id=3]
[ext_resource path="res://scenes/Limit.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/main/doomsday_zone.mp3" type="AudioStream" id=5]
[ext_resource path="res://scenes/GameOverTimer.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/GameOverLabel.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/SkyZone.tscn" type="PackedScene" id=8]

[node name="FinalLevel" type="Node2D"]
script = ExtResource( 3 )

[node name="DoomsdayZone" parent="." instance=ExtResource( 1 )]

[node name="SuperSonic" parent="." instance=ExtResource( 2 )]
position = Vector2( 112, 342 )
z_index = 1

[node name="Limit3" parent="." instance=ExtResource( 4 )]
position = Vector2( -49, 285 )
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
collision_layer = 2097152
collision_mask = 131072

[node name="GenerateMeteorTimer" type="Timer" parent="."]

[node name="FirstPhaseDurationTimer" type="Timer" parent="."]
wait_time = 60.0

[node name="Song" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="GameOverLabel" parent="." instance=ExtResource( 7 )]

[node name="GameOverTimer" parent="." instance=ExtResource( 6 )]

[node name="GenerateMissileTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Limit" parent="." instance=ExtResource( 4 )]
position = Vector2( 125000, 237 )
collision_layer = 2097152
collision_mask = 131072

[node name="Limit2" parent="." instance=ExtResource( 4 )]
position = Vector2( 125000, 757 )
collision_layer = 2097152
collision_mask = 131072

[node name="SkyZone" parent="." instance=ExtResource( 8 )]
position = Vector2( 341, 219 )

[node name="GameWonTimer" type="Timer" parent="."]
wait_time = 13.0

[node name="ShowHyperSonicSpriteTimer" type="Timer" parent="."]

[connection signal="timeout" from="GenerateMeteorTimer" to="." method="_on_GenerateMeteorTimer_timeout"]
[connection signal="timeout" from="FirstPhaseDurationTimer" to="." method="_on_FirstPhaseDurationTimer_timeout"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
[connection signal="timeout" from="GenerateMissileTimer" to="." method="_on_GenerateMissileTimer_timeout"]
[connection signal="timeout" from="GameWonTimer" to="." method="_on_GameWonTimer_timeout"]
[connection signal="timeout" from="ShowHyperSonicSpriteTimer" to="." method="_on_ShowHyperSonicSpriteTimer_timeout"]
